project/stage/parse_tests/tests/reject/bad_var_decl/after_print_id.ul
boolean f(int m) {
    print m;
    void meep;
}
